--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "autoprefixer": "^10.4.17",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   }
